compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_fn_and_external_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn foo() { 1 }\nexternal fn foo() -> Float =\n  \"module\" \"function\"\nfn foo() { 2 }"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │  
1 │   fn foo() { 1 }
  │   ^^^^^^^^ First defined here
2 │ ╭ external fn foo() -> Float =
3 │ │   "module" "function"
  │ ╰─────────────────────^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

