compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_fn_const.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn foo() { 1 }\nconst foo = 2"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ fn foo() { 1 }
  │ ^^^^^^^^ First defined here
2 │ const foo = 2
  │ ^^^^^^^^^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

