compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_fn_extfn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn wibble() { 1 }\n\n@external(erlang, \"module2\", \"function2\")\nfn wibble() -> Float\n"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ fn wibble() { 1 }
  │ ^^^^^^^^^^^ First defined here
  ·
4 │ fn wibble() -> Float
  │ ^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
