compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_fn_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn wibble() { 1 }\nfn wibble() { 2 }"
---
----- SOURCE CODE
fn wibble() { 1 }
fn wibble() { 2 }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ fn wibble() { 1 }
  │ ^^^^^^^^^^^ First defined here
2 │ fn wibble() { 2 }
  │ ^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
