compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_function_names.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn dupe() { 1 }\nfn dupe() { 2 }"
---
----- SOURCE CODE
fn dupe() { 1 }
fn dupe() { 2 }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ fn dupe() { 1 }
  │ ^^^^^^^^^ First defined here
2 │ fn dupe() { 2 }
  │ ^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
